# Group20ProjectWork

./: .gitignore  .travis.yml  Check.txt  Doxyfile  Hi.txt  NEWS.md  README.md  TEAM.md  generateDocumentationAndDeploy.sh  test.txt
Base Classes/: Cell.cpp  Cell.h  Material.cpp  Material.h  Model.cpp  Vector.cpp  Vector.h
Library Code/: Cell.cpp  Cell.h  Display.cpp  Display.h  Material.cpp  Material.h  Model.cpp  Model.h  Vector.cpp  Vector.h  Vertex.cpp  Vertex.h  main.cpp
ModelLoader/: README.md
QtModelLoader/: CMD Cmake Commands.txt  CMD Commands.txt  CMakeLists.txt  Cell.cpp  Cell.h  Doxyfile  Material.cpp  Material.h  Model.cpp  Model.h  Run.bat  Vertex.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtModelLoader/LibraryCode/: CMakeLists.txt  Cell.cpp  Material.cpp  Model.cpp  Vertex.cpp  codeTest.cpp  main.h  test.cpp  testsOLD - Copy.cpp  testsOLD.cpp
UI/: mainwindow.ui  resources.qrc
html/: _cell_8h_source.html  _library_01_code_2_cell_8h_source.html  _library_01_code_2_material_8h_source.html  _library_01_code_2_model_8h_source.html  _library_01_code_2_vertex_8h_source.html  _material_8h_source.html  _model_8h_source.html  _qt_model_loader_2_cell_8h_source.html  _qt_model_loader_2_material_8h_source.html  _qt_model_loader_2_model_8h_source.html  _qt_model_loader_2_vertex_8h_source.html  _qt_model_loader_2main_8cpp.html  _vertex_8h_source.html  annotated.html  catch_8hpp_source.html  class_catch_1_1_assertion_handler-members.html  class_catch_1_1_assertion_handler.html  class_catch_1_1_benchmark_looper-members.html  (+293 more)
modelClass/: Cell.cpp  (+4 more)
(+63 files in other folders)
